update: improve performance and responsiveness for card show Can touch and hold to view bigger card on mobile, improve responsiveness on mobile and tablet and fix bug where event listeners would run when cardshow was not open

--- a/src/components/CardShow/CardShow.css
+++ b/src/components/CardShow/CardShow.css
@@ -83,5 +83,10 @@ right: 50px;
     height: auto;
     margin-right: 10px;
   }
+
+  .card-show-big-img{
+    width: 40%;
+    height: auto;
+  }
  }
 
